log
Sun 16 Oct 2022 11:20:17 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
4149231
